2.0/_sources/reference/extensions/binary_compatibility.rst.txt
.. _reference_extensions_binary_compatibility:

Binary compatibility
--------------------

This plugin, located in the cache ``extensions/plugins/compatibility/compatibility.py`` allows defining custom
rules for the binary compatibility of packages across settings and options.
It has some built-in logic implemented, but can be customized.


.. code-block:: python

    def compatibility(conanfile):
        result = []
        if conanfile.settings.build_type == "Debug":
            result.append({"settings": [("build_type", "Release")]})
        return result
  

Some important rules:

- The built-in ``compatibility.py`` is subject to changes in future releases. To avoid being updated
  in the future, please remove the first comment ``# This file was generated by Conan.``


.. warning::

  The ``compatibility.py`` feature is in **preview**. The current default ``compatibility.py`` is
  **experimental**.
  See :ref:`the Conan stability<stability>` section for more information.

.. seealso::

    Read the :ref:`binary model reference<reference_binary_model>` for a full view of the Conan binary model.
